# mcp_rag

./: pyproject.toml
mcp_config/: servers.json
src/mcp_rag/chunking_and_embedding_agent/: chunk_embed_graph.py  encode.ipynb  run_chunk_embed.py  visualize.py
src/mcp_rag/chunking_and_embedding_agent/data/pdfs_b64/: attention.pdf.b64
src/mcp_rag/dev_utils/: test_chroma.py  test_mcp_tools.py  test_vector_query.py
src/mcp_rag/file_discovery_agent/: file_discovery_graph.py  run_file_discovery.py  visualize.py
src/mcp_rag/rag_agent/: rag_chat_graph.py  run_rag_chat.py  visualize.py
