[project]
name = "mcp-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.3.21,<0.4.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-mcp-adapters (>=0.0.5,<0.0.6)",
    "langchain-openai (>=0.3.11,<0.4.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pymupdf (>=1.25.4,<2.0.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "pyppeteer (>=2.0.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "mcp_rag", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
